--- a/app/src/main/res/layout/activity_complete_profile.xml
+++ b/app/src/main/res/layout/activity_complete_profile.xml
@@ -72,7 +72,42 @@
                     android:layout_width="match_parent"
                     android:layout_height="63dp"
                     android:hint="Nombre de Usuario"
-                    android:inputType="textEmailAddress" />
+                    android:inputType="text" />
+
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+
+            >
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_phone"
+                android:layout_marginTop="30dp"
+                android:layout_marginRight="5dp"
+                />
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                >
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/textInputPhone"
+                    android:layout_width="match_parent"
+                    android:layout_height="63dp"
+                    android:hint="Telefono"
+                    android:inputType="numberSigned" />
             </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
