--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -136,7 +136,7 @@
 
                 >
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/textInputDescripcion"
+                    android:id="@+id/textInputDescription"
                     android:layout_width="match_parent"
                     android:layout_height="63dp"
                     android:hint="Descripcion"
@@ -150,6 +150,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/textViewCategory"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="CATEGORIAS"
@@ -191,6 +192,7 @@
               app:cardElevation="10dp">
 
               <ImageView
+                  android:id="@+id/imageViewAgri"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:src="@drawable/campo_dos"/>
@@ -200,7 +202,7 @@
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
-               android:text="AGRICULTURA"
+               android:text="AGRICOLA"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold"
@@ -227,6 +229,7 @@
                   app:cardElevation="10dp">
 
                   <ImageView
+                      android:id="@+id/imageViewAvi"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:src="@drawable/gallina_dos"/>
@@ -236,7 +239,7 @@
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
-                  android:text="AVICULTURA"
+                  android:text="AVICOLA"
                   android:textAlignment="center"
                   android:textColor="@color/black"
                   android:textStyle="bold"
@@ -262,6 +265,7 @@
                   app:cardElevation="10dp">
 
                   <ImageView
+                      android:id="@+id/imageViewPor"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:src="@drawable/cerdo_dos"/>
@@ -271,7 +275,7 @@
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
-                  android:text="PORCICULTURA"
+                  android:text="PORCICOLA"
                   android:textAlignment="center"
                   android:textColor="@color/black"
                   android:textStyle="bold"
@@ -298,6 +302,7 @@
                   app:cardElevation="10dp">
 
                   <ImageView
+                      android:id="@+id/imageViewPisc"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:src="@drawable/pescado"/>
@@ -307,7 +312,7 @@
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
-                  android:text="PISCICULTURA"
+                  android:text="PISCICOLA"
                   android:textAlignment="center"
                   android:textColor="@color/black"
                   android:textStyle="bold"
@@ -329,5 +334,12 @@
         android:layout_gravity="bottom"
         android:layout_margin="20dp"
         android:textColor="@color/colorWhite"/>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/circleImageBack"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/ic_arrow_left"
+        android:layout_margin="15dp"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
