--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name ="colorAcent">#132BC6</color>
     <color name ="colorGray">#D5D2D2</color>
     <color name ="colorDarkBlue">#0F1A30</color>
+    <color name ="colorGrayLight">#D5D0D0</color>
 </resources>
