--- a/app/src/main/res/layout/activity_post_detail.xml
+++ b/app/src/main/res/layout/activity_post_detail.xml
@@ -39,6 +39,7 @@
                     app:sliderStartAutoCycle="true" />
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/fabComment"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_chat"
@@ -102,12 +103,12 @@
                         android:id="@+id/btnShowProfile"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="VER PERFIL"
                         android:layout_marginLeft="10dp"
                         android:background="@drawable/button_border"
-                        android:textColor="@color/colorAcent"
+                        android:paddingLeft="10dp"
                         android:paddingRight="10dp"
-                        android:paddingLeft="10dp"/>
+                        android:text="VER PERFIL"
+                        android:textColor="@color/colorAcent" />
 
 
                 </LinearLayout>
@@ -162,13 +163,7 @@
 
             </androidx.cardview.widget.CardView>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/colorGray"
-                android:layout_marginTop="20dp"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp" />
+
 
             <TextView
                 android:layout_width="match_parent"
@@ -194,11 +189,56 @@
                 android:layout_marginRight="25dp"
                 android:layout_marginLeft="25dp" />
 
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorGray"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp" />
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="COMENTARIOS"
+                android:textColor="@color/black"
+                android:textSize="16dp"
+                android:textStyle="bold"
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp">
+
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerViewComments"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+
+
+            </LinearLayout>
+
+
         </LinearLayout>
 
 
     </ScrollView>
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/circleImageBack"
+        android:layout_width="40dp"
+        android:layout_height="35dp"
+        android:src="@drawable/ic_arrow_back_white"
+        android:layout_margin="10dp"
+        android:scaleType="centerCrop"/>
 
 
 
