Creacion del diseño like

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,6 @@
     <color name ="colorGray">#D5D2D2</color>
     <color name ="colorDarkBlue">#0F1A30</color>
     <color name ="colorGrayLight">#D5D0D0</color>
+    <color name ="colorRed">#EC0909</color>
+
 </resources>
