--- a/app/src/main/res/layout/activity_post_detail.xml
+++ b/app/src/main/res/layout/activity_post_detail.xml
@@ -45,7 +45,7 @@
                     android:src="@drawable/ic_chat"
                     android:layout_gravity="right|bottom"
                     android:layout_marginRight="15dp"
-                    android:layout_marginTop="7dp"/>
+                   />
 
 
 
@@ -221,7 +221,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerViewComments"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="wrap_content" />
 
 
             </LinearLayout>
