--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,9 +5,36 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.HomeFragment"
-    android:layout_marginBottom="50dp">
+    android:layout_marginBottom="50dp"
+    >
 
-    <include layout="@layout/action_bar_toolbar"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@color/colorAcent">
+
+        <com.mancj.materialsearchbar.MaterialSearchBar
+            style="@style/MaterialSearchBarLight"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:mt_hint="Texto de busqueda"
+            app:mt_placeholder="Buscar"
+            app:mt_searchBarColor="@color/colorBlue"
+            app:mt_maxSuggestionsCount="10"
+            app:mt_placeholderColor="@color/colorWhite"
+            app:mt_textColor="@color/colorWhite"
+            app:mt_searchIconTint="@color/colorWhite"
+            app:mt_menuIconTint="@color/colorWhite"
+            app:mt_clearIconTint="@color/colorWhite"
+            app:mt_hintColor="@color/colorGrayLight"
+            app:mt_backIconTint="@color/colorWhite"
+            app:mt_leftTextSelectorTint="@color/colorGrayLight"
+            android:id="@+id/searchBar" />
+
+    </LinearLayout>
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,15 +46,18 @@
             android:id="@+id/recyclerViewHome"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>
+            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
 
     </LinearLayout>
 
-   <com.google.android.material.floatingactionbutton.FloatingActionButton
-       android:id="@+id/fab"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:src="@drawable/ic_add"
-       android:layout_gravity="bottom|right"
-       android:layout_margin="15dp"/>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_add"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="15dp" />
+
+
+
 </FrameLayout>
